# CircuitPython_equalizer

./: README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst
equalizer/: __init__.py  equalizer.py
examples/: equalizer_simpletest.py
