# SPDX-FileCopyrightText: 2022 Alec Delaney for Adafruit Industries
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-equalizer"
description = "Equalizer Graphic Representation for CircuitPython"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Jose D. Montoya", email = "equalizer@mailmeto.mozmail.com"}
]
urls = {Homepage = "https://github.com/jposada202020/CircuitPython_equalizer.git"}
keywords = [
    "hardware",
    "micropython",
    "circuitpython",
    "graphic",
    "styles",
    "widget",
    "displayio",
    "color",
    "widget",
    "equalizer",
    "sound"
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["CircuitPython_Equalizer"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
